--- a/index.html
+++ b/index.html
@@ -34,8 +34,50 @@
        </div>
     </header>
     <main>
-        
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+              <img class="team-img" src="./images/team1.png" alt="two architect discussing about design">
+              <img class="team-img" src="./images/team2.png" alt="three architects">
+              <img  class="team-img" src="./images/team3.png" alt="two architect discussing about design">
+              <img  class="team-img" src="./images/team4.png" alt="two architect discussing about design">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span class="quick-list">Quick list</span> of Our <br> <span class="text-primary">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features you will enjoy -->
+         <section>
+          <h3 class="section-title">Features you will <br> love & enjoy</h3>
+         </section>
+        <!-- some facts -->
+         <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="fact-container">
+               <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+               </div>
+               <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+               </div>
+               <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+               </div>
+               <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+               </div>
+            </div>
+         </section>
     </main>
     <footer>
 
