--- a/index.html
+++ b/index.html
@@ -54,27 +54,34 @@
         <!-- some facts -->
          <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <p class="text-lightgrey fact-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             <div class="fact-container">
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+               <div class="fact-card display-flex">
+                <div>
+                <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name text-lightgrey">Awards Winnings</h5>
+                </div>
                </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+               <div class="fact-card display-flex">
+                <div>
+                <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                <h4 class="fact-number">1458</h4>
+                <h5 class="fact-name text-lightgrey">Project Finished</h5>
+                </div>
                </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+               <div class="fact-card display-flex">
+                <div>
+                <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-name text-lightgrey">Clients Worked</h5>
+                </div>
                </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+               <div class="fact-card display-flex">
+                <div>
+                <img src="./images/icons/email.png" alt="" class="fact-icon">
+                <h4 class="fact-number">22578</h4>
+                <h5 class="fact-name text-lightgrey">Email Send</h5>
                </div>
             </div>
          </section>
