--- a/index.html
+++ b/index.html
@@ -48,8 +48,36 @@
             </div>
         </section>
         <!-- features you will enjoy -->
-         <section>
-          <h3 class="section-title">Features you will <br> love & enjoy</h3>
+         <section class="features display-flex">
+            <div>
+          <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+          <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or <br> randomised words which don't look even</p>
+
+          <!-- feature card container -->
+           <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+           </div>
+           <div class="feature-card">
+            <h4 class="feature-title">Drag & Drop Builder</h4>
+            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+           </div>
+           <div class="feature-card">
+            <h4 class="feature-title">Awesome Modern Design</h4>
+            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+           </div>
+           <div class="feature-card">
+            <h4 class="feature-title">Super Easy to Edit</h4>
+            <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+           </div>
+           </div>
+           <div>
+            <img src="./images/architect.png" alt="">
+            <button id="experience-badge" class="btn-primary">
+                <span id="experience-year">10+Years</span><br>
+                <span>Experience</span>
+            </button>
+           </div>
          </section>
         <!-- some facts -->
          <section class="some-facts">
