--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br> injected humour, or randomised...........</p>
            </div>
            </div>
-           <div>
+           <div class="feature-architect">
             <img src="./images/architect.png" alt="">
-            <button id="experience-badge" class="btn-primary">
+            <button id="experience-badge" class="btn-primary-2">
                 <span id="experience-year">10+Years</span><br>
                 <span>Experience</span>
             </button>
@@ -129,8 +129,8 @@
             </div>
          </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+       <p class="text-lightgrey">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
